<resources>
    <string name="app_name">Vishnu Sports</string>
    <string name="logo">logo</string>
    <string name="Login">Login</string>
    <string name="vishnu_sports">vishnu_sports</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="cancel_button">cancel</string>
    <string name="login_button">login</string>
    <string name="attempts">Attempts Left</string>
    <string name="Register">Register</string>
    <string name="alreadyHaveAnAccount">Already Have An Account ?</string>
    <string name="inputEmail">Email</string>
    <string name="inputPassword">Password</string>
    <string name="inputConfirmPassword">Confirm Password</string>
    <string name="btnRegister">Register</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="dontHaveAnAccount">Don\'t Have An Account ?</string>
    <string name="SignUp">SignUp</string>
    <string name="Login_Back">Login</string>
    <string name="loginPassword">Password</string>
    <string name="btncontinue">Continue</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="viewUsername">Username</string>
    <string name="viewEmail">Email</string>
    <string name="btnLogout">Logout</string>

    <string-array name="Gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="Gender">Gender</string>
    <string name="otpRegister">GET OTP</string>
    <string name="title_activity_after_login">AfterLogin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login_after">LoginAfter</string>
    <string name="title_activity_client_home">ClientHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>