<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aa"
    android:paddingLeft="20dp"
    android:paddingTop="15dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFEFE"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="none|textPersonName|textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/Register"
        app:layout_constraintStart_toStartOf="@+id/Register"
        app:layout_constraintTop_toBottomOf="@+id/Register" />


    <Button
        android:id="@+id/otpRegister"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg"
        android:textColor="@color/black"
        android:editable="false"
        android:text="@string/btncontinue"
        app:layout_constraintEnd_toEndOf="@+id/gamesPlayed"
        app:layout_constraintStart_toStartOf="@+id/gamesPlayed"
        app:layout_constraintTop_toBottomOf="@+id/gamesPlayedDisplay1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/otpRegister"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="@+id/otpRegister"
        app:layout_constraintTop_toBottomOf="@+id/otpRegister">

        <TextView
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/alreadyHaveAnAccount"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/Login_Back"
            android:textColor="#321EEC"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/gamesPlayed"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:isScrollContainer="true"
        android:overScrollMode="always"
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:saveEnabled="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:text="Click to select games interested"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:verticalScrollbarPosition="right"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <TextView
        android:id="@+id/gamesPlayedDisplay1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="@+id/gamesPlayed"
        app:layout_constraintStart_toStartOf="@+id/gamesPlayed"
        app:layout_constraintTop_toBottomOf="@+id/gamesPlayed" />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:contentDescription="@string/Gender"
        android:entries="@array/Gender"
        android:paddingLeft="20sp"
        android:prompt="@string/Gender"
        android:saveEnabled="true"
        android:scrollbarStyle="insideInset"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>