<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".ui.Profile.ProfileFragment"
    android:background="@drawable/aa"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <ProgressBar
        android:id="@+id/progressBarLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="@+id/btnLogout"
        app:layout_constraintStart_toStartOf="@+id/btnLogout"
        app:layout_constraintTop_toTopOf="@id/btnLogout">

    </ProgressBar>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:editable="false"
        android:text="@string/viewUsername"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/displayUsername"
        app:layout_constraintStart_toStartOf="@+id/displayUsername"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <EditText
        android:id="@+id/displayUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:editable="true"
        android:ems="10"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:editable="false"
        android:text="Email"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/displayUsername"
        app:layout_constraintTop_toBottomOf="@+id/displayUsername" />

    <TextView
        android:id="@+id/displayEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_email_black"
        android:drawablePadding="10dp"
        android:editable="false"
        android:ems="10"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/displayUsername"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/displayUsername"
        app:layout_constraintTop_toBottomOf="@+id/displayUsername" />


    <TextView
        android:id="@+id/gamesPlayedDisplay1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:editable="false"
        android:ems="10"
        android:paddingLeft="20dp"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/displayEmail"
        app:layout_constraintStart_toStartOf="@+id/displayEmail"
        app:layout_constraintTop_toBottomOf="@+id/displayEmail" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:textColor="@color/black"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintStart_toStartOf="@+id/gamesPlayedDisplay1"
        app:layout_constraintTop_toBottomOf="@+id/gamesPlayedDisplay1" />

    <Button
        android:id="@+id/btnSave"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="save"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="@+id/gamesPlayedDisplay1"
        app:layout_constraintTop_toBottomOf="@+id/gamesPlayedDisplay1" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/btn_bg"
        android:visibility="visible"
        android:text="@string/btnLogout"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/gamesPlayedDisplay1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gamesPlayedDisplay1"
        app:layout_constraintTop_toBottomOf="@+id/gamesPlayedDisplay1" />


</androidx.constraintlayout.widget.ConstraintLayout>